--- a/src/style.sass
+++ b/src/style.sass
@@ -11,5 +11,15 @@ html, body
   width: 100%
   height: 100%
   
+body
+  position: relative
+  display: grid
+  justify-items: center
+
 canvas
   display: block
+
+input[type=range]
+  position: absolute
+  top: 2rem
+  width: clamp(5rem, 50%, 15rem)
