add info to index.html

--- a/src/style.sass
+++ b/src/style.sass
@@ -19,7 +19,14 @@ body
 canvas
   display: block
 
-input[type=range]
+input[type=range], p
   position: absolute
-  top: 2rem
   width: clamp(5rem, 50%, 15rem)
+
+input[type=range]
+  top: 2rem
+
+p
+  bottom: 2rem
+  font-size: 0.8rem
+  line-height: 1em
